--- a/hatch.html
+++ b/hatch.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/Mystyle1.css">
+    <link rel="stylesheet" href="Mystyle1.css">
     <title>HATCHBACK CARS</title>
 </head>
 <body>
