--- a/sedan.html
+++ b/sedan.html
@@ -15,7 +15,7 @@
         </div>
         <tr>
             <div class="pic">
-            <td><img src="images/aura.jpg" alt="" height="270" width="455"></td>
+            <td><img src="aura.jpg" alt="" height="270" width="455"></td>
             </div>
             <div class="model">
             <td>HYUNDAI AURA</td>
@@ -24,7 +24,7 @@
         </tr>
         <tr>
             <div class="pic">
-            <td><img src="images/bmw.jpg" alt="" height="270" width="455"></td>
+            <td><img src="bmw.jpg" alt="" height="270" width="455"></td>
             </div>
             <div class="model">
             <td>BMW</td>
@@ -34,7 +34,7 @@
         </tr>
         <tr>
             <div class="pic">
-            <td><img src="images/verna.jpg" alt="" height="270" width="455"></td>
+            <td><img src="verna.jpg" alt="" height="270" width="455"></td>
             </div>
             <div class="model">
             <td>HUNDAI VERNA</td>
@@ -43,7 +43,7 @@
         </tr>
         <tr>
             <div class="pic">
-            <td><img src="images/etios.jpg" alt="" height="270" width="455"></td>
+            <td><img src="etios.jpg" alt="" height="270" width="455"></td>
             </div>
             <div class="model">
             <td>TOYOTA ETIOS</td>
