--- a/hatch.html
+++ b/hatch.html
@@ -15,7 +15,7 @@
         </div>
         <tr>
             <div class="pic">
-            <td><img src="images/i10.jpg" alt="" height="270" width="455"></td>
+            <td><img src="i10.jpg" alt="" height="270" width="455"></td>
             </div>
             <div class="model">
             <td>HYUNDAI I10</td>
@@ -24,7 +24,7 @@
         </tr>
         <tr>
             <div class="pic">
-            <td><img src="images/i20.jpg" alt="" height="270" width="455"></td>
+            <td><img src="i20.jpg" alt="" height="270" width="455"></td>
             </div>
             <div class="model">
             <td>HYUNDAI I20</td>
@@ -33,7 +33,7 @@
         </tr>
         <tr>
             <div class="pic">
-            <td><img src="images/wagnor.webp" alt="" height="270" width="455"></td>
+            <td><img src="wagnor.webp" alt="" height="270" width="455"></td>
             </div>
             <div class="model">
             <td>MARUTI WAGNOR</td>
