--- a/submit.html
+++ b/submit.html
@@ -13,7 +13,7 @@
     <br>
     <br>
     <p>THANKS FOR REGISTERING AND HERE IS UR BRAND NEW BMW . THANK YOU!!! BYE BYE !!!!!</p>
-    <img src="images/bmw1.webp" alt="" height="350" width="500">
+    <img src="bmw1.webp" alt="" height="350" width="500">
 
 </body>
 </html>
